--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,8 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: de
+    neue_bilder_ordner: '%kernel.root_dir%/../neue_bilder'
+    gespeicherte_bilder_ordner: '%kernel.root_dir%/../web/assets/images/archivierungen'
 
 framework:
     #esi:             ~
